# nerian_stereo_ros2

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  visiontransfer_version.conf
include/nerian_stereo/: nerian_stereo_node.h
launch/: nerian_stereo.launch.py
src/: camera_info_splitter.cpp  nerian_stereo_node.cpp
